    or ELF binaries.
  add "bench", a small benchmark util in the spirit of apachebench
  make bzip2 support optional (and disable it per default)
  add Date header
  add MIME magic (will try to identify file type by looking at first bytes)
    this is only used if the extension is not conclusive
  also log the GET arguments in the log for CGI requests

0.8:
  fix pipelining bug
  send all HTTP headers als HTTP_FOO=bar environment to CGIs
  gcc 4 unsigned char* <-> char* cleanups
  add temporary fallback redirect (see README.redir)
  only fork cgi slave if -C is given on command line
  IRIX compatibility (yuck!)

0.7:
  use the new scan_urlencoded2 (libowfat cvs); properly serve
    libstdc++.tar.gz and not 404

0.6:
  implement ABOR (ncftp was confused after aborting a connection)
  add https support (using OpenSSL)
  add primitive .htaccess support
  fix http ranges (Joachim Berdal Haga via Gerrit Pape, reported for
    fnord but also applied here)

0.5:
  CGI-through-proxy support (read README.proxy)
  SIGHUP will close server sockets but continue serving open requests
  add man page
  fix HTTP pipelining fd leak
  add broken-symlink-redirect like fnord does (read README.redirect)
  output size in log as 64-bit number
  add resume support to dl
  support POST for CGI proxy
  fix HEAD fd leak (oops)
  experimental CGI support
  add -l option to make FTP server ask for password
    (works around buggy proxy servers, e.g. Genugate)

0.4:
  add primitive FTP support (default: enabled; disable with -F!)
  add pipelining support (for both FTP and HTTP)

0.3:
  add chroot+setuid support
  compiler warnings removed (Julien Touche)
  also take time for reaping in forkbench (Niels Provos)
  fix memory and fd leaks (with Thomas Walpuski)

0.2:
  zlib support (directory listings only)
  add timeout support
  add major kludgery to work around deliberate IPv6 breakage on OpenBSD
    from that itojun maniac.  Friends don't let friends run OpenBSD!
  add httpbench

0.1: